--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="nav">
         <ul>
             <li><a class="active" href="#home">Home</a></li>
-            <li><a href="C:\c language\webdev\know_more.html">Know more</a></li>
+            <li><a href="know_more.html">Know more</a></li>
             <li><a href="#funfacts">FunFacts</a></li>
             <li><a href="#about">About</a></li>
         </ul>
